# learn_solana

./: Cargo.toml  Readme.md  desing.drawio  desing2.drawio  keypair.json
conf/: app.yaml  jwt.yaml  log.yaml  persistence.yaml  queue.yaml  redis.yaml  smtp.yaml  storage.yaml
src/: main.rs
src/bootstrap/: bootstrap.rs  mod.rs
src/core/: mod.rs
src/core/application/: application.rs  jwt_service.rs  mod.rs  wallet.rs
src/core/application/user/: mod.rs  user_application.rs
src/core/application/wallet/: mod.rs  wallet_application.rs
src/core/domain/: domain.rs  mod.rs
src/core/domain/user/: domain_service.rs  entity.rs  mod.rs  repository.rs  repository_interface.rs  service.rs  user_domain.rs  value_object.rs
src/core/domain/user/entity/: mod.rs  role_entity.rs  user_entity.rs
src/core/domain/wallet/: entity.rs  mod.rs  repository.rs  service.rs  wallet_domain.rs
src/core/infrastructure/: infrastructure.rs  mod.rs
src/core/infrastructure/config/: config.rs  mod.rs
src/core/infrastructure/jwt/: jwt.rs  mod.rs
src/core/infrastructure/log/: log.rs  mod.rs  request.rs  response.rs
src/core/infrastructure/presentation/: mod.rs  presentation.rs
src/core/infrastructure/presentation/model/migration/: m20220101_000001_create_table.rs  migration.rs  mod.rs
src/core/infrastructure/presentation/mysql/: mod.rs  mysql.rs
src/core/infrastructure/presentation/postgres/: mod.rs  postgresql.rs
src/core/infrastructure/presentation/repository/: mod.rs  repository.rs
src/core/infrastructure/presentation/repository/user/: mod.rs  role_repository.rs  user_repository.rs
src/core/infrastructure/presentation/repository/wallet/: wallet_repository.rs
src/core/infrastructure/utils/: address.rs  mod.rs  ssh.rs  system_info.rs  wallet.rs
src/core/infrastructure/utils/encrypt/: hash.rs
src/core/infrastructure/webserver/: mod.rs  webserver.rs
src/core/interfaces/: mod.rs
src/core/interfaces/handler/: user.rs
src/core/interfaces/router/: mod.rs  router.rs
src/core/presentation/: mod.rs  presentation.rs
src/core/presentation/api/: error.rs  mod.rs  user.rs
src/core/presentation/api/request/: user.rs  wallet.rs
src/core/presentation/api/response/: response.rs
src/core/presentation/handler/: handler.rs  mod.rs  user.rs  wallet.rs
src/core/presentation/middleware/: auth_middleware.rs
src/core/presentation/router/: mod.rs  router.rs
src/test/: mod.rs
storage/logs/: log.2024-08-12  sql.2024-08-12
